--- a/docs/ESDG_ROM/refs.bib
+++ b/docs/ESDG_ROM/refs.bib
@@ -1,3 +1,11 @@
+@inproceedings{marley2015reduced,
+  title={Reduced order modeling of compressible flows with unsteady normal shock motion},
+  author={Marley, Christopher D and Duraisamy, Karthikeyan and Driscoll, James F},
+  booktitle={51st AIAA/SAE/ASEE Joint Propulsion Conference},
+  pages={3988},
+  year={2015}
+}
+
 @article{kramer2019nonlinear,
   title={Nonlinear model order reduction via lifting transformations and proper orthogonal decomposition},
   author={Kramer, Boris and Willcox, Karen E},
@@ -331,6 +339,26 @@
   pages={628--651},
   year={2018},
   publisher={Wiley Online Library}
+}
+@article{rim2018transport,
+  title={Transport reversal for model reduction of hyperbolic partial differential equations},
+  author={Rim, Donsub and Moe, Scott and LeVeque, Randall J},
+  journal={SIAM/ASA Journal on Uncertainty Quantification},
+  volume={6},
+  number={1},
+  pages={118--150},
+  year={2018},
+  publisher={SIAM}
+}
+@article{reiss2018shifted,
+  title={The shifted proper orthogonal decomposition: A mode decomposition for multiple transport phenomena},
+  author={Reiss, Julius and Schulze, Philipp and Sesterhenn, J{\"o}rn and Mehrmann, Volker},
+  journal={SIAM Journal on Scientific Computing},
+  volume={40},
+  number={3},
+  pages={A1322--A1344},
+  year={2018},
+  publisher={SIAM}
 }
 @incollection{cagniart2019model,
   title={Model order reduction for problems with large convection effects},
@@ -1412,7 +1440,16 @@ author = "Cengke Shi and Chi-Wang Shu",
   publisher={Elsevier}
 }
 
-
+@article{persson2008newton,
+  title={{Newton-GMRES preconditioning for discontinuous Galerkin discretizations of the Navier--Stokes equations}},
+  author={Persson, P-O and Peraire, Jaime},
+  journal={SIAM Journal on Scientific Computing},
+  volume={30},
+  number={6},
+  pages={2709--2733},
+  year={2008},
+  publisher={SIAM}
+}
 @article{persson2006sub,
   title={{Sub-cell shock capturing for discontinuous Galerkin methods}},
   author={Persson, Per-Olof and Peraire, Jaime},
