--- a/docs/ESDG_jacobian/refs.bib
+++ b/docs/ESDG_jacobian/refs.bib
@@ -1,3 +1,10 @@
+@article{kempf2018automatic,
+  title={Automatic code generation for high-performance discontinuous galerkin methods on modern architectures},
+  author={Kempf, Dominic and He{\ss}, Ren{\'e} and M{\"u}thing, Steffen and Bastian, Peter},
+  journal={arXiv preprint arXiv:1812.08075},
+  year={2018}
+}
+
 @inproceedings{cuthill1969reducing,
   title={Reducing the bandwidth of sparse symmetric matrices},
   author={Cuthill, Elizabeth and McKee, James},
