--- a/docs/ESDG_mortar/main.tex
+++ b/docs/ESDG_mortar/main.tex
@@ -1313,15 +1313,15 @@ cycle list={{blue, mark=*}, {red, dashed ,mark=square*}}%,{black, dashdotted ,ma
 }
 % N = 1
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(1,0.0302287)(0.5,0.0204278)(0.25,0.00988213)(0.125,0.00383616)};
+coordinates{(1,0.0300089)(0.5,0.02037)(0.25,0.0103349)(0.125,0.00395744)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(1,0.0312387)(0.5,0.020413)(0.25,0.00690005)(0.125,0.0017994)};
+coordinates{(1,0.0309619)(0.5,0.0201996)(0.25,0.00698411)(0.125,0.0018293)};
 
 % N = 2
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(1,0.025246)(0.5,0.00858607)(0.25,0.00156388)(0.125,0.000334682)};
+coordinates{(1,0.0252826)(0.5,0.00898116)(0.25,0.00161751)(0.125,0.000284006)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(1,0.0236979)(0.5,0.00616892)(0.25,0.000963938)(0.125,0.000249721)};
+coordinates{(1,0.0237929)(0.5,0.00638897)(0.25,0.000964247)(0.125,0.000126189)};
 
 % N = 3
 \addplot+[semithick, mark options={solid, fill=markercolor}]
@@ -1353,15 +1353,16 @@ cycle list={{blue, mark=*}, {red, dashed ,mark=square*}}%,{black, dashdotted ,ma
 }
 % N = 1
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(1,0.225344)(0.5,0.165699)(0.25,0.0820851)(0.125,0.0494277)};
+coordinates{(1,0.225732)(0.5,0.175585)(0.25,0.0875643)(0.125,0.050868)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(1,0.222488)(0.5,0.144629)(0.25,0.073849)(0.125,0.0217714)};
+coordinates{(1,0.221903)(0.5,0.144126)(0.25,0.0724546)(0.125,0.0219034)};
+
 
 % N = 2
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(1,0.2011)(0.5,0.0658348)(0.25,0.0233793)(0.125,0.00727696)};
+coordinates{(1,0.198065)(0.5,0.0693157)(0.25,0.024472)(0.125,0.00612038)};
 \addplot+[semithick, mark options={solid, fill=markercolor}]
-coordinates{(1,0.159118)(0.5,0.0478442)(0.25,0.0177047)(0.125,0.00421538)};
+coordinates{(1,0.178736)(0.5,0.0575655)(0.25,0.016464)(0.125,0.0029831)};
 
 % N = 3
 \addplot+[semithick, mark options={solid, fill=markercolor}]
